--- a/extract_nuspec_deps/requirements.txt
+++ b/extract_nuspec_deps/requirements.txt
@@ -17,7 +17,7 @@ packaging==20.4
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.2.0
+Pillow>=8.1.1
 prompt-toolkit==3.0.7
 ptyprocess==0.6.0
 Pygments==2.6.1
