--- a/django_polls/requirements.txt
+++ b/django_polls/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.2.10
 astroid==2.4.2
 backcall==0.2.0
 decorator==4.4.2
-Django==3.1.2
+django>=3.1.6
 flake8==3.8.4
 ipython==7.18.1
 ipython-genutils==0.2.0
